assets/css/index.css
* {
    font-family: 'Tajawal', sans-serif;
}

body {
    background-color: #eeeeee !important;
}

/** Header CSS **/

.header {
    background-color: black;
    display: block;
}

.header-logo {
    margin: 20px;
    height: 15vh;
    float: left;
}

.header-title {
    color: white;
    text-align: center;
    font-family: 'Tajawal', sans-serif;
    font-weight: 500;
    font-size: 45px;
}

.header-cart {
    float: right;
    padding: 5px;
    margin-right: 10px;
    text-decoration: none;
    font-size: 40px;
    text-align: center;
    cursor: pointer;
    color: white;
    border: none;
    background-color: inherit;
}

.topnav {
    overflow: hidden;
    background-color: #333;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
  }
  
  .topnav a {
    float: left;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
  }
  
  .topnav a:hover {
    background-color: #ddd;
    color: black;
    text-decoration: none;
  }

  .topnav a .account-button {
    float: right;
  }

/** Dropdown Cart CSS **/

.dropdown {
    float:right;
    padding-right: 30px;
}

.dropdown .dropdown-menu {
    padding:20px;
    top:50px !important;
    width:350px !important;
    left: -90px!important;
    box-shadow:0px 5px 30px black;
    position: absolute;
}

.dropdown-menu:before {
    content: " ";
    position:relative;
    top:-20px;
    right:50px;
    border:10px solid transparent;
    border-bottom-color:#fff;
}

.dropdown-cart-btns {
    text-decoration: none;
    background-color: #ffd100;
    color: black;
    font-size: 16px;
    padding: 16px 32px;
    border-radius: 8px;
    width: 100%;
}

/** BrowseCars CSS **/

.column-left {
    float: left;
    width: 15%;
    padding: 15px 20px;
    background-color: #ffffff;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
    border-radius: 8px;
}

.column-right {
    float: left;
    width: 85%;
    padding: 15px;
}

.main-container::after {
    content: "";
    display: table;
    clear: both;
  }

.main-container {
    background-color: #eeeeee;
    padding: 20px;
    height: 100%;
    width: 100%;
}

.car-grid {
    background-color: #eeeeee;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.car-row {
    display: flex;
    justify-content: space-between;
    width: 100%;
    margin: 20px 50px;
}

.car {
    background-color: #ffffff;
    border-radius: 5px;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
    padding: 20px;
    flex-basis: 30%;
    min-width: 300px;
    max-width: 30%;
}

.image-container {
    position: relative;
}

.car-image {
    width: 100%;
    border-radius: 8px;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
    opacity: 1;
    display: block;
    height: auto;
    transition: .5s ease;
    backface-visibility: hidden;
}

.image-middle {
    transition: .5s ease;
    opacity: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    text-align: center;
  }

  .image-container:hover .car-image {
    opacity: 0.3;
  }
  
  .image-container:hover .image-middle {
    opacity: 1;
  }

  .image-link {
    background-color: #ffd100;
    color: black;
    font-size: 16px;
    padding: 16px 32px;
    border-radius: 8px;
  }

.car-view {
    background-color: #ffffff;
    border-radius: 5px;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
    padding: 10px;
    margin-right: 10px;
    flex-basis: 30%;
    min-width: 300px;
    max-width: 30%;
}

.car-name {
    font-size: 22px;
    font-weight: 500;
}

.car-bodytype {
    font-weight: 300;
}

.car-price {
    font-size: 20px;
    font-weight: 600;
}

a .hide-link {
    color: grey;
    text-decoration: none;
}

.add-cart-btn {
    background-color: black;
    border: none;
    color: white;
    padding: 10px 25px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin: 4px 2px;
    cursor: pointer;
    -webkit-transition-duration: 0.4s;
    transition-duration: 0.4s;
    border-radius: 8px;
}

.add-cart-btn:hover {
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
  }

  .tooltip {
    position: relative;
    display: inline-block;
    border-bottom: 1px dotted black;
  }
  
  .tooltip .tooltiptext {
    visibility: hidden;
    width: 120px;
    background-color: black;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;
  
    position: absolute;
    z-index: 1;
  }
  
  .tooltip:hover .tooltiptext {
    visibility: visible;
  }

/** Cart View CSS **/

.cart-container {
    margin: 10px 30vh;
    padding: 5px 10px;
    background-color: white;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
    border-radius: 8px;
}

.cart-view-container {
    margin: 50px 100px;
}

.remove-item-btn {
    background-color: inherit;
    color:	#696969;
    border: none;
    cursor: pointer;
    text-decoration: none;
}

/** Table CSs **/

table {
    border-collapse: collapse;
    width: 100%;
  }
  
  th, td {
    text-align: left;
    padding: 8px;
  }table {
    border-collapse: collapse;
    width: 100%;
  }
  
  th, td {
    text-align: left;
    padding: 8px;
  }

